// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-lazy-render => should mount component after make it visible 1`] = `null`;

exports[`with-lazy-render => should mount component after make it visible 2`] = `
<div
  class="my-component_visible"
>
  text inside
</div>
`;

exports[`with-lazy-render => should mount visible component 1`] = `
<div
  class="my-component_visible"
>
  text inside
</div>
`;

exports[`with-lazy-render => should not mount invisible component 1`] = `null`;

exports[`with-lazy-render => should not unmount component after make it invisible 1`] = `
<div
  class="my-component_visible"
>
  text inside
</div>
`;

exports[`with-lazy-render => should not unmount component after make it invisible 2`] = `
<div
  class="my-component"
>
  text inside
</div>
`;
